stagging/nginx.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: my-app-dev
  labels:
    app: nginx
spec:
  replicas: 0
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          imagePullPolicy: IfNotPresent
          image: rembun/devops:centos-httpd
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: dockerhub-argocd
