stagging/service-config.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-stagging
  namespace: my-app-dev
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000  # You can choose any available port between 30000-32767
