stagging/nginx-service-prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-service-stagging
  namespace: my-app-dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: nginx-stg.vega.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service-stagging
                port:
                  number: 80
  tls:
    - secretName: nginx-stg-tls
      hosts:
        - nginx-stg.vega.com
